[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/Shuriken.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Misc/spr_star_0.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Misc/spr_star_1.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=2]

resource_name = "blink_out"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 3, 3 )

[node name="Shuriken" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 5
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
speed = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
playing = true
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/blink_out = SubResource( 2 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

modulate = Color( 0.302361, 1, 0.0311241, 1 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_entered" from="." to="." method="_on_Shuriken_body_entered"]

[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


